kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiles-api
  namespace: tiles
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tiles-api
  template:
    metadata:
      labels:
        app: tiles-api
        keel.sh/policy: all
    spec:
      containers:
      - name: tiles-api
        imagePullPolicy: Always
        image: bsord/tiles-api:latest
        ports:
        - name: http
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tiles-api
  namespace: tiles
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: tiles-api
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiles-client
  namespace: tiles
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tiles-client
  template:
    metadata:
      labels:
        app: tiles-client
    spec:
      containers:
      - name: tiles-client
        imagePullPolicy: Always
        image: bsord/tiles-client:latest
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tiles-client
  namespace: tiles
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tiles-client
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tiles-ingress
  namespace: tiles
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "pr-ws-soute"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/session-cookie-path: "/socket.io"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: tiles-tls-cert
    hosts:
    - "tiles.bsord.dev"
  rules:
  - host: tiles.bsord.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: tiles-client
          servicePort: 80

      - path: /socket.io
        backend:
          serviceName: tiles-api
          servicePort: 80

      - path: /tiles
        backend:
          serviceName: tiles-api
          servicePort: 80

      - path: /apihealth
        backend:
          serviceName: tiles-api
          servicePort: 80
